force-app/main/default/objects/Health_Score_Elements__mdt/Health_Score_Elements__mdt.object-meta.xml
<CustomObject>
    <description>This contains different elements captured for Account Health Scores</description>
    <label>Health Score Elements</label>
    <pluralLabel>Health Score Elements</pluralLabel>
</CustomObject>