force-app/main/default/objects/Health_Score_Elements__mdt/fields/Health_Score_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Health_Score_Record_Type__c</fullName>
    <label>Health Score Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Health Score</fullName>
                <default>true</default>
                <label>Account Health Score</label>
            </value>
            <value>
                <fullName>Program Health Score</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>