force-app/main/default/objects/Health_Score_Elements__mdt/fields/Health_Segment__c.field-meta.xml
<CustomField>
    <fullName>Health_Segment__c</fullName>
    <label>Health Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member Satisfaction</fullName>
                <default>true</default>
                <label>Member Satisfaction</label>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Active 30</fullName>
            </value>
            <value>
                <fullName>Marketing Type (Outreach Stratification)</fullName>
            </value>
            <value>
                <fullName>Email Coverage</fullName>
            </value>
            <value>
                <fullName>Population Refresh</fullName>
            </value>
            <value>
                <fullName>eHba1c Reduction</fullName>
            </value>
            <value>
                <fullName>ROI Status</fullName>
            </value>
            <value>
                <fullName>Client Launch Date</fullName>
            </value>
            <value>
                <fullName>Systolic BP Reduction</fullName>
            </value>
            <value>
                <fullName>Diastolic BP Reduction</fullName>
            </value>
            <value>
                <fullName>Program Score</fullName>
            </value>
            <value>
                <fullName>Renewal Timing</fullName>
            </value>
            <value>
                <fullName>Cross Sells/Expansions</fullName>
            </value>
            <value>
                <fullName>Client NPS</fullName>
            </value>
            <value>
                <fullName>Interaction Cadence</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor Interaction/Engagement</fullName>
            </value>
            <value>
                <fullName>Contract Path/Partner Relationship/Status</fullName>
            </value>
            <value>
                <fullName>Client Business Health</fullName>
            </value>
            <value>
                <fullName>Issues</fullName>
            </value>
            <value>
                <fullName>Competitor w/in account</fullName>
            </value>
            <value>
                <fullName>Immediate Action Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>