force-app/main/default/objects/Health_Score_Elements__mdt/listViews/All_Health_Score_Elements.listView-meta.xml
<ListView>
    <fullName>All_Health_Score_Elements</fullName>
    <columns>MasterLabel</columns>
    <columns>Health_Score_Record_Type__c</columns>
    <columns>Program__c</columns>
    <columns>Health_Segment__c</columns>
    <columns>Element_Section__c</columns>
    <columns>DeveloperName</columns>
    <columns>Display_Fields__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Health Score Elements</label>
    <language>en_US</language>
</ListView>